# Effektify

./: .gitignore  .pre-commit-config.yaml  ROADMAP.md  main.py  pyproject.toml  vercel.json
cache/: agent_output.json  channel_curves.json  optimizer_output.json
frontend/: app.js  index.html  styles.css
frontend/data/: brief.json
src/: agent_graph.py  agent_run.py  agent_schemas.py  bootstrap.py  config.py  curve_fit.py  export_ui_payload.py  grounding.py  ingest.py  optimizer.py  precompute.py  simulator.py
tests/: test_agent.py  test_curve_fit.py  test_export_ui_payload.py  test_frontend_reference_ui.py  test_grounding.py  test_optimizer.py
