[project]
name = "effektify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "commitizen>=4.13.10",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 80

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
